Gap fixed

--- a/wp-content/themes/basics-revamp/assets/scss/pages/_single-blog.scss
+++ b/wp-content/themes/basics-revamp/assets/scss/pages/_single-blog.scss
@@ -24,6 +24,9 @@
     .wp-block-columns {
         @apply flex max-sm:flex-col;
         gap: var(--gap);
+        @include mobile {
+            gap: 0;
+        }
         & > * {
             flex: 1;
         }
